# switchbot-py

./: README.md  pyproject.toml
src/switchbot_py/: __init__.py  client.py  device.py  errors.py  remote.py  switchbot.py
test/: test_client.py  test_switchbot.py
