[project]
name = "switchbot-py"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "gsy0911", email = "yoshiki0911@gmail.com" }
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "jupyterlab>=4.3.5",
    "ruff>=0.9.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/switchbot_py"]

[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--ignore=.venv",
    "--ignore=node_modules",
    "--ignore=volume",
    "--cov=./src/switchbot_py",
    "--cov-report=html",
]
markers = []
pythonpath = [
    "./src/switchbot_py"
]
testpaths = [
    "./test",
]

[tool.rye.scripts]
format = { chain = ["ruff format", "ruff check --fix"] }
test = "rye run pytest"
